Fixed html of list view

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -154,9 +154,17 @@
   
         <p class="paragraph-body">
          We created a strategy to organize the entire source code, resulting in, 
-            1.    Faster source code environment setup time
-            2.    Reduced onboarding overhead for new developers joining the team
-            3.    Accelerated build and release process by adopting conventions, leading to a decreased lead time for feature delivery
+            <ol>
+                <li>
+                    Faster source code environment setup time
+                </li>
+                <li>
+                    Reduced onboarding overhead for new developers joining the team
+                </li>
+                <li>
+                    Accelerated build and release process by adopting conventions, leading to a decreased lead time for feature delivery
+                </li>
+            </ol>
 
         </p>
       </div>
@@ -173,8 +181,6 @@
         </p>
         <p class="paragraph-body">
           Tools like Gradle bring the following to the table:
-        </p>
-          <p class="paragraph-body">
           <ul>
               <li>
                   <b>Automation:</b> Steps to build and test are documented as executable code so that builds are automated, consistent, and reproducible.
