--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -257,6 +257,23 @@
         </p>
         <p class="paragraph-body">
           Before making code or architecture changes, you must do the following:
+            <ol>
+                <li>
+                    Ensure uniformity in terms of structure and dependencies of developer, testing, and production environments.
+                </li>
+                <li>
+                    Automate all build, test, and deployment processes.
+                </li>
+                <li>
+                    Prevent the spread of all low-quality code while also teaching people what not to do.
+                </li>
+                <li>
+                    Run automated tests on every commit.
+                </li>
+                <li>
+                    Pair the best technologies with the best practices to get the most out of them.
+                </li>
+            </ol>
         </p>
       </div>
     </div>
