Added css to bullet list

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -154,7 +154,7 @@
   
         <p class="paragraph-body">
          We created a strategy to organize the entire source code, resulting in, 
-            <ol>
+            <ol class="paragraph-body">
                 <li>
                     Faster source code environment setup time
                 </li>
@@ -181,7 +181,7 @@
         </p>
         <p class="paragraph-body">
           Tools like Gradle bring the following to the table:
-          <ul>
+          <ul class="paragraph-body">
               <li>
                   <b>Automation:</b> Steps to build and test are documented as executable code so that builds are automated, consistent, and reproducible.
               </li>
@@ -257,7 +257,7 @@
         </p>
         <p class="paragraph-body">
           Before making code or architecture changes, you must do the following:
-            <ol>
+            <ol class="paragraph-body">
                 <li>
                     Ensure uniformity in terms of structure and dependencies of developer, testing, and production environments.
                 </li>
