Adjust spacing before what we did section

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -30,7 +30,7 @@
           Their product is a centralized platform for customers to get informed on their telecom and energy expenses. It helps businesses and government organizations cut costs by running analytics on monthly vendor invoices. Our client also becomes the intermediary between the customer and their vendors to help suggest optimizations of services consumed that reduce billing amounts.
         </p>
   
-        <h2 class="section-heading mt-5">WHAT WE DID</h2>
+        <h2 class="section-heading">WHAT WE DID</h2>
         <p class="paragraph-body">
           Decades-old systems often stand the test of time, but evolve to accrue a lot of technical debt. Our client's system did so too. The SaaS product was built over 20 years and faced several unexpected issues that caused downtimes and customer frustration. This led to a decision to dedicate time and money to the critical modernization process!
         </p>
