--- a/layouts/shortcodes/circlepack.html
+++ b/layouts/shortcodes/circlepack.html
@@ -46,7 +46,7 @@
         .size([diameter - margin, diameter - margin])
         .padding(2);
 
-    d3.json("ind-team-org-market.json", function(error, root) {
+    d3.json("blog/four-lenses-of-productivity/ind-team-org-market.json", function(error, root) {
         if (error) throw error;
 
         root = d3.hierarchy(root)
