Added punctuations in few places

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -181,7 +181,7 @@
       </p>
       <p class="paragraph-body">
         For our client, setting up Gradle solved the massive problem of manually performing numerous tasks to create a
-        build. All while hoping and praying the build doesn’t fail.
+        build, all while hoping and praying the build doesn’t fail.
       </p>
       <p class="paragraph-body">
         Tools like Gradle bring the following to the table:
@@ -224,7 +224,7 @@
         minimum quality gate that should be in place is ensuring the build’s success.
       </p>
       <p class="paragraph-body">
-        Prioritizing code quality was a huge milestone for our client
+        Prioritizing code quality was a huge milestone for our client.
       </p>
     </div>
     <div class="text-container">
