--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -31,7 +31,11 @@
       </div>
     </div>
     <div class="banner-container bg-shcolor">
-      <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}" />
+      <img
+        class="img_small"
+        src="{{ .Params.banner_image |relURL }}"
+        alt="{{ .Title }}"
+      />
     </div>
     <div class="text-container">
       <h2 class="section-heading">BACKGROUND</h2>
@@ -84,8 +88,11 @@
       <div class="what-we-did-container">
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_1 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_1 |relURL }}"
+            />
           </div>
           <p class="label">
             Three months to make the product globalization ready
@@ -94,8 +101,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_2 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_2 |relURL }}"
+            />
           </div>
           <p class="label">
             Following this, under seven days and minimal development effort to
@@ -105,8 +115,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_3 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_3 |relURL }}"
+            />
           </div>
           <p class="label">
             Launched in 52+ countries and 22+ languages in the following months
@@ -115,8 +128,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_4 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_4 |relURL }}"
+            />
           </div>
           <p class="label">
             Built trust and long-term association with the client to execute
@@ -134,7 +150,10 @@
           <div class="item">
             <p class="index">1.</p>
             <p class="label">Creating the approach</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -142,7 +161,10 @@
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Tackling the frontend</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -150,7 +172,10 @@
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Next step, the backend</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -158,7 +183,10 @@
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Solution for emails</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -166,7 +194,10 @@
           <div class="item">
             <p class="index">5.</p>
             <p class="label">Support for RTL languages</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
       </div>
@@ -182,17 +213,18 @@
       </p>
 
       <p class="paragraph-body">
-        Since language is a crucial aspect affecting user experience, we needed a proper strategy to retrieve content in
-        the target language based on user location.
+        Since language is a crucial aspect affecting user experience, we needed
+        a proper strategy to retrieve content in the target language based on
+        user location.
       </p>
 
       <p class="paragraph-body">
-        Our approach was to extract the strings of content, save their translations, and serve this translated version
-        to the end user. To achieve this, we set up several steps in the frontend, backend, and database. We also made
-        our solution user-friendly by translating emails and supporting right-to-left languages to enhance user
-        experience.
+        Our approach was to extract the strings of content, save their
+        translations, and serve this translated version to the end user. To
+        achieve this, we set up several steps in the frontend, backend, and
+        database. We also made our solution user-friendly by translating emails
+        and supporting right-to-left languages to enhance user experience.
       </p>
-
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
@@ -205,24 +237,28 @@
         language preference.
       </p>
       <p class="paragraph-body">
-        The first step in tackling the UI-embedded content was to move it from code to simple text files. This helps
-        simplify the process of introducing new languages in the future. A new language can be added simply by
-        replicating the flat file in a different language.
+        The first step in tackling the UI-embedded content was to move it from
+        code to simple text files. This helps simplify the process of
+        introducing new languages in the future. A new language can be added
+        simply by replicating the flat file in a different language.
       </p>
       <p class="paragraph-body">
-        We used JSON files to separate code from the language embedded in it. Doing so ensures all content is available
-        in one place, and a translation service can easily translate this content.
+        We used JSON files to separate code from the language embedded in it.
+        Doing so ensures all content is available in one place, and a
+        translation service can easily translate this content.
       </p>
       <p class="paragraph-body">
-        In a global solution, there is a need for customized content based on the user’s location. In addition to
-        generalizing common and hard coded content, helpline numbers are dynamically displayed based on user location to
-        ensure users get the correct information.
-
+        In a global solution, there is a need for customized content based on
+        the user’s location. In addition to generalizing common and hard coded
+        content, helpline numbers are dynamically displayed based on user
+        location to ensure users get the correct information.
       </p>
       <p class="paragraph-body">
-        Lastly, we introduced Crowdin, a third-party translation provider, to get translations for new languages. To
-        extend this further, we integrated Crowdin with GitHub PR workflow so that the automated pipelines can handle
-        the translations without a developer’s manual intervention, saving time for the team.
+        Lastly, we introduced Crowdin, a third-party translation provider, to
+        get translations for new languages. To extend this further, we
+        integrated Crowdin with GitHub PR workflow so that the automated
+        pipelines can handle the translations without a developer’s manual
+        intervention, saving time for the team.
       </p>
     </div>
 
@@ -232,20 +268,24 @@
       </h3>
 
       <p class="paragraph-body mt-3">
-        Maintaining consistency is vital in development, so we took similar steps in the backend to those in the
-        frontend, ensuring a seamless user experience without disruptions.
+        Maintaining consistency is vital in development, so we took similar
+        steps in the backend to those in the frontend, ensuring a seamless user
+        experience without disruptions.
       </p>
       <p class="paragraph-body">
-        We configured the application to deliver localized content based on the user’s language preferences.
+        We configured the application to deliver localized content based on the
+        user’s language preferences.
       </p>
       <p class="paragraph-body">
-        Initially, all content was retrieved directly from the database and passed to the frontend in English. As new
-        languages were introduced, we made the necessary adjustments to the application to serve the translated data
-        content instead.
+        Initially, all content was retrieved directly from the database and
+        passed to the frontend in English. As new languages were introduced, we
+        made the necessary adjustments to the application to serve the
+        translated data content instead.
       </p>
       <p class="paragraph-body">
-        For translations, we opted for a hybrid of database and YAML files for serving translated content, using Crowdin
-        as our choice tool for providing translations.
+        For translations, we opted for a hybrid of database and YAML files for
+        serving translated content, using Crowdin as our choice tool for
+        providing translations.
       </p>
     </div>
     <div class="text-container">
@@ -269,10 +309,9 @@
         events and email campaigns with these editable templates.
       </p>
       <p class="paragraph-body">
-        For our client, this meant a better overall experience. Mails
-        are now translated and can be modified without a dependency on the
-        developer, removing a significant bottleneck for the client's marketing
-        team.
+        For our client, this meant a better overall experience. Mails are now
+        translated and can be modified without a dependency on the developer,
+        removing a significant bottleneck for the client's marketing team.
       </p>
     </div>
     <div class="text-container">
@@ -281,33 +320,38 @@
       </h3>
 
       <p class="paragraph-body mt-3">
-        While the application empowered users to access content in their preferred language, supporting RTL language was
-        the natural next step.
+        While the application empowered users to access content in their
+        preferred language, supporting RTL language was the natural next step.
       </p>
       <p class="paragraph-body">
-        For right-to-left languages such as Arabic, the UI usually appears mirrored. Based on this factor, we identified
-        the elements that would appear mirrored to ensure an intuitive user experience.
+        For right-to-left languages such as Arabic, the UI usually appears
+        mirrored. Based on this factor, we identified the elements that would
+        appear mirrored to ensure an intuitive user experience.
       </p>
       <p class="paragraph-body">
-        Bidirectionality is an integral part of the UI to support RTL content. An instance of this would be the
-        direction of the arrow that indicates the back button in RTL languages. To accommodate this, we added
-        bidirectional text and icons configured to mirror depending on the language needs.
+        Bidirectionality is an integral part of the UI to support RTL content.
+        An instance of this would be the direction of the arrow that indicates
+        the back button in RTL languages. To accommodate this, we added
+        bidirectional text and icons configured to mirror depending on the
+        language needs.
       </p>
       <p class="paragraph-body">
-        At the same time, content types such as images appear the same irrespective of language. For this content, we
-        added smart exceptions as they don’t adhere to RTL styling rules. The same applies to specific icons that don’t
-        hold directional meaning.
+        At the same time, content types such as images appear the same
+        irrespective of language. For this content, we added smart exceptions as
+        they don’t adhere to RTL styling rules. The same applies to specific
+        icons that don’t hold directional meaning.
       </p>
       <p class="paragraph-body">
-        Overall, the steps we took, such as translating English to RTL language and UI mirroring, transformed our
-        solution into a robust tool that met the diverse needs of each end-user.
+        Overall, the steps we took, such as translating English to RTL language
+        and UI mirroring, transformed our solution into a robust tool that met
+        the diverse needs of each end-user.
       </p>
       <p class="paragraph-body">
-        *All the metrics in this case study are accurate as of the time of publishing.
+        *All the metrics in this case study are accurate as of the time of
+        publishing.
       </p>
     </div>
   </div>
-  {{ partial "recommend-case-study.html" . }}
-  {{ partial "lets-talk.html" . }}
+  {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
