--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -27,7 +27,11 @@
       </div>
     </div>
     <div class="banner-container bg-catscolor">
-      <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}" />
+      <img
+        class="img_small"
+        src="{{ .Params.banner_image |relURL }}"
+        alt="{{ .Title }}"
+      />
     </div>
     <div class="text-container">
       <h2 class="section-heading">BACKGROUND</h2>
@@ -78,8 +82,11 @@
       <div class="what-we-did-container">
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_1 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_1 |relURL }}"
+            />
           </div>
           <p class="label">
             Having a centralized system where agents can access all the loan
@@ -89,8 +96,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_2 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_2 |relURL }}"
+            />
           </div>
           <p class="label">
             Frequently deploying new updates and maintaining an average release
@@ -100,8 +110,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_3 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_3 |relURL }}"
+            />
           </div>
           <p class="label">
             Automating all manual checks, saving up to 4000 manual hours for 800
@@ -111,8 +124,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_4 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_4 |relURL }}"
+            />
           </div>
           <p class="label">
             Transforming more than five departments, thanks to the success of
@@ -122,8 +138,11 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_5 |relURL }}" />
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_5 |relURL }}"
+            />
           </div>
           <p class="label">
             Improving the entire banking process, leading to immense client
@@ -134,7 +153,10 @@
     </div>
     <div class="banner-container bg-deep_blue text-center testimonial">
       <div class="inner" style="padding: 0px 25px">
-        <img style="width: 62px; height: auto" src="{{ .Params.open_quote |relURL }}" />
+        <img
+          style="width: 62px; height: auto"
+          src="{{ .Params.open_quote |relURL }}"
+        />
         <p class="paragraph-body text-white text">
           We've engaged Incubyte for two internal initiatives - one, to build
           applications to support & optimize our internal processes and two, to
@@ -147,10 +169,16 @@
           implementation expertise and best software development practices, and
           its been a pleasure working with them.
         </p>
-        <img style="width: 62px; height: auto; align-self: end;" src="{{ .Params.close_quote |relURL }}" />
+        <img
+          style="width: 62px; height: auto; align-self: end"
+          src="{{ .Params.close_quote |relURL }}"
+        />
       </div>
-      <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
-        src="{{ .Params.testimonial_person |relURL }}" />
+      <img
+        class="rounded-circle"
+        style="width: 62px; height: 62px; background: #d9d9d9 !important"
+        src="{{ .Params.testimonial_person |relURL }}"
+      />
       <p class="label text-white name">SVP at a Consumer Finance Lender, TX</p>
     </div>
     <div class="text-container">
@@ -161,7 +189,10 @@
           <div class="item">
             <p class="index">1.</p>
             <p class="label">Problem discovery</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -169,7 +200,10 @@
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Centralized system to access loan contracts</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -177,7 +211,10 @@
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Addressing privacy concerns</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -185,7 +222,10 @@
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Automating static, repeated checks</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -193,7 +233,10 @@
           <div class="item">
             <p class="index">5.</p>
             <p class="label">Intuitive UI</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -201,7 +244,10 @@
           <div class="item">
             <p class="index">6.</p>
             <p class="label">Lightweight system</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
 
@@ -209,7 +255,10 @@
           <div class="item">
             <p class="index">7.</p>
             <p class="label">The road ahead</p>
-            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
           </div>
         </a>
       </div>
@@ -378,387 +427,3 @@
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
-
-  .template-container {
-    margin: 0 50px 0 50px;
-  }
-
-  .title {
-    margin-top: 50px;
-  }
-
-  .case-study {
-    font-family: "Nunito Sans", serif !important;
-  }
-
-  .case-study p,
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-family: "Nunito Sans", serif !important;
-  }
-
-  .text-container {
-    margin: 0 auto 0 auto;
-    max-width: 1100px;
-  }
-
-  .case-study .title {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 141.9%;
-    letter-spacing: 0.06em;
-
-    color: #000000;
-  }
-
-  .summary {
-    margin: 20px 0 80px 0;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 33px;
-
-    color: #0e3252;
-  }
-
-  .section-heading {
-    color: #0e3252;
-    font-size: 32px;
-    font-weight: 800;
-  }
-
-  .stats {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    background-color: #f1f1f1;
-    border-radius: 12px;
-    flex: 1;
-    padding: 12px;
-    padding-top: 28px;
-    min-width: 200px !important;
-  }
-
-  .stats>p {
-    margin: 0;
-  }
-
-  .stats>p:first-child {
-    color: #0e3252;
-    font-size: 60px;
-    line-height: 32px;
-    font-weight: 700;
-  }
-
-  .stats-container {
-    display: flex;
-    row-gap: 54px;
-    overflow-x: auto;
-    margin-bottom: 62px;
-    text-align: center;
-    gap: 20px;
-  }
-
-  .testimonial {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .testimonial .inner {
-    display: flex;
-    flex-direction: column;
-    max-width: 1100px;
-    margin: 0 auto 0 auto;
-  }
-
-  .testimonial p {
-    max-width: 1100px;
-    margin: 0 auto 0 auto;
-  }
-
-  .testimonial .text {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 28px;
-  }
-
-  .testimonial .name {
-    max-width: 1100px;
-    margin: 0 auto 0 auto;
-    font-weight: 400;
-    font-size: 16px;
-    padding-top: 8px;
-  }
-
-  .banner-container {
-    width: 100%;
-    height: auto;
-    margin-bottom: 50px;
-  }
-
-  .img_small {
-    width: 50% !important;
-    height: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .bg-catscolor {
-    background-color: #0c3e5a;
-  }
-
-  .bg-deep_blue {
-    background-color: #0e3252;
-  }
-
-  .bg-grey {
-    background-color: #f1f1f1;
-  }
-
-  .banner-container>img {
-    width: 100%;
-    margin: 0 auto 0 auto;
-    display: flex;
-  }
-
-  .client-details-container {
-    display: flex;
-    gap: 54px;
-  }
-
-  .details-box {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-  }
-
-  .details-box>p {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 27px;
-    color: black;
-    margin: 0;
-  }
-
-  .details-box>p:first-child {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    color: #666666;
-  }
-
-  .paragraph-body {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-    color: black;
-
-    margin-bottom: 2em;
-  }
-
-  .paragraph-body-list {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-    color: black;
-  }
-
-  .item-list {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-    color: black;
-    margin-bottom: 2em;
-  }
-
-  .mt-5 {
-    margin-top: 3em !important;
-  }
-
-  .what-we-did-container {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 54px;
-    margin-bottom: 62px;
-    justify-content: space-between;
-  }
-
-  .what-we-did-container>.item {
-    display: flex;
-    justify-content: flex-start;
-    gap: 16px;
-    align-items: center;
-  }
-
-  .what-we-did-container>.item>.label {
-    color: black;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-    max-width: 24em;
-    margin: auto;
-  }
-
-  .what-we-did-container>.item>.index {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 33px;
-    letter-spacing: 0.06em;
-    color: #000000;
-  }
-
-  .project-highlights-heading {
-    color: #0e3252;
-    margin-bottom: 24px;
-    font-size: 32px;
-    font-weight: 800;
-  }
-
-  .project-highlights-subheading {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    color: #0e3252;
-  }
-
-  .project-highlights-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 0 0;
-    grid-template-areas:
-      "item item"
-      "item item";
-  }
-
-  @media (max-width: 991px) {
-    .project-highlights-grid {
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 0 0;
-      grid-template-areas:
-        "item"
-        "item"
-        "item"
-        "item";
-    }
-
-    .testimonial .inner {
-      padding: 0 20px 0 20px;
-    }
-  }
-
-  @media (max-width: 425px) {
-    .img_small {
-      width: 100% !important;
-    }
-
-    .template-container {
-      margin: 0 20px 0 20px;
-    }
-
-    .case-study .title {
-      font-size: 32px;
-    }
-
-    .summary {
-      font-size: 20px;
-      margin: 25px 0 50px 0;
-    }
-
-    .testimonial .text {
-      font-size: 16px;
-    }
-
-    .testimonial .name {
-      font-size: 14px;
-    }
-
-    .section-heading {
-      font-size: 28px;
-    }
-
-    .project-highlights-subheading {
-      font-size: 20px;
-    }
-
-    .project-highlights-sub-subheading {
-      font-size: 18px;
-    }
-
-    .paragraph-body {
-      font-size: 16px;
-    }
-
-    .paragraph-body-list {
-      font-size: 16px;
-    }
-
-    .item-list {
-      font-size: 16px;
-    }
-
-    .stats>p:first-child {
-      font-size: 48px;
-    }
-  }
-
-  .project-highlights-grid>a>.item {
-    display: flex;
-    justify-content: flex-start;
-    gap: 16px;
-    align-items: flex-baseline;
-  }
-
-  .project-highlights-grid>a>.item>.index {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 24px;
-    letter-spacing: 0.06em;
-    text-align: left;
-    color: black;
-  }
-
-  .project-highlights-grid>a>.item>.label {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-    max-width: 24em;
-    text-decoration: underline;
-    text-underline-position: under;
-    text-decoration-color: #0e3252;
-    color: black;
-  }
-
-  .project-highlights-sub-subheading {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 32px;
-    letter-spacing: 0.06em;
-    text-transform: capitalize;
-
-    color: #0e3252;
-  }
-</style>
