refactor: simpler case study routing

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,22 +1,11 @@
 {{ define "main" }}
 
 {{ if (strings.Contains .Params.slug "case-study") }}
-{{ partial "case-study-styles.html" . }}
+    {{ partial "case-study-styles.html" . }}
+    {{ partial (printf "%s.html" .Params.slug) . }}
 {{ end }}
 
-{{ if (eq .Params.slug "global-case-study") }}
-{{ partial "global-case-study.html" . }}
-
-{{ else if (eq .Params.slug "monnai-case-study") }}
-{{ partial "monnai-case-study.html" . }}
-
-{{ else if (eq .Params.slug "finance-case-study") }}
-{{ partial "finance-case-study.html" . }}
-
-{{ else if (eq .Params.slug "build-deployment-case-study") }}
-{{ partial "build-deployment-case-study.html" . }}
-
-{{ else if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
+{{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 
 <section class="section">
   <div class="container">
