feat: add specific styles for case studies

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -303,3 +303,8 @@
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
+<style>
+  .bg-tbcolor {
+    background-color: #004A6C;
+  }
+</style>
