--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -427,3 +427,8 @@
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
+<style>
+  .bg-catscolor {
+    background-color: #0c3e5a;
+  }
+</style>
