--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -355,3 +355,8 @@
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
+<style>
+  .bg-shcolor {
+    background-color: #319f96;
+  }
+</style>
