--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -423,3 +423,9 @@
   </div>
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
+
+<style>
+  .bg-monnai_blue {
+    background-color: #202475;
+  }
+</style>
