--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,9 +3,8 @@
 {{ if (strings.Contains .Params.slug "case-study") }}
     {{ partial "case-study-styles.html" . }}
     {{ partial (printf "%s.html" .Params.slug) . }}
-{{ end }}
 
-{{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
+{{ else if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 
 <section class="section">
   <div class="container">
