fix: case study alignment

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -81,7 +81,7 @@
               src="{{ .Params.what_we_did_icon_4 |relURL }}" />
           </div>
           <p class="label">
-            Control new technical debt from flowing in
+            Control new technical debt from flowing in and resolve existing debt
           </p>
         </div>
 
