--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -422,6 +422,9 @@
         We are changing this by introducing small changes so users can change
         and update the product.
       </p>
+      <p class="paragraph-body">
+        *All the metrics in this case study are accurate as of the time of publishing.
+      </p>
     </div>
   </div>
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
