--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -419,6 +419,9 @@
         anomalies like errors in logs will throw an alarm email to relevant
         stakeholders.
       </p>
+      <p class="paragraph-body mt-3">
+         *All the metrics in this case study are accurate as of the time of publishing.
+      </p>
     </div>
   </div>
   {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
