Removed grey bg for image

--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -271,7 +271,7 @@
         following, exponential at first and then a dip!
       </p>
     </div>
-    <div class="banner-container bg-grey">
+    <div class="banner-container">
       <img
         class="img_small"
         src="{{ .Params.image_1 |relURL }}"
