adds the search-form partial into list.html

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,6 +11,7 @@
             </div>
         </div>
         {{end}}
+        {{ partial "search-form.html" . }}
         <div class="display-4">Posts</div>
         <hr>
         <div class="row">
