adds search-index

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,6 +12,7 @@
         </div>
         {{end}}
         {{ partial "search-form.html" . }}
+        {{ partial "search-index.html" . }}
         <div class="display-4">Posts</div>
         <hr>
         <div class="row">
