--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,4 +1,5 @@
-{{ define "main" }} {{ partial "search-form.html" . }}
+{{ define "main" }} {{ partial "page-header.html" . }} {{ partial
+"search-form.html" . }}
 
 <ul id="results">
   <li>Enter a keyword above to search.</li>
