changes the logic for search

--- a/layouts/partials/search-index.html
+++ b/layouts/partials/search-index.html
@@ -3,11 +3,11 @@
     {{ range $.Site.Pages}}
       "{{ .Permalink }}": {
           "title": {{ .Title  }},
-          "tags": [{{ range .Params.Tags }}"{{ . }}",{{ end }}],
-          "authors":[{{range .Params.authors}}"{{ . }}",{{end}}],
+          "tags": [{{ range .Params.tags }}"{{ . }}",{{ end }}],
+          "authors":[{{range .Params.authors }}"{{ . }}",{{end}}],
           "summary":{{ .Summary }},
-          "image":{{ .Params.image}},
-          "date": {{ .Date.Format "Monday, January 2, 2006"}},
+          "image":{{ .Params.image }},
+          "date": {{ .Date.Format "January 2, 2006" }},
           "url": {{ .Permalink }}
       },
       {{ end }}
