--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,7 +1,10 @@
-{{ define "main" }} {{ partial "page-header.html" . }} {{ partial
-"search-form.html" . }}
+{{ define "main" }} {{ partial "page-header.html" . }}
 
-<ul id="results">
-  <li>Enter a keyword above to search.</li>
-</ul>
-{{ partial "search-index.html" . }} {{ end }}
+<section class="section">
+  {{ partial "search-form.html" . }}
+  <ul id="results">
+    <li>Enter a keyword above to search.</li>
+  </ul>
+  {{ partial "search-index.html" . }}
+</section>
+{{ end }}
