--- a/layouts/partials/search-index.html
+++ b/layouts/partials/search-index.html
@@ -14,4 +14,4 @@
   }
 </script>
 <script src="https://unpkg.com/lunr/lunr.js"></script>
-<script src="/index.js"></script>
+<script src="/search.js"></script>
